Atualizado planilha de escala, alterado as cores da tabela

--- a/index.html
+++ b/index.html
@@ -110,41 +110,41 @@
 
     <script>
         // Dados do CSV
-        const csvData = `SEMANA 1					,,12/05/2025,13/05/2025,14/05/2025,15/05/2025,16/05/2025
-Técnico,Modalidade,Segunda,Terça ,Quarta,Quinta,Sexta
-Antônio R.,PGD,REMOTO,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL
-Edna F.,PGD,PRESENCIAL,PRESENCIAL,REMOTO,PRESENCIAL,PRESENCIAL
-Francisco F.,PGD,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,REMOTO
-Guilherme R.,PGD,PRESENCIAL,ATIVIDADE EXTERNA,PRESENCIAL,REMOTO,PRESENCIAL
-Heron C.,CONT. DE FREQ.,PRESENCIAL,PRESENCIAL,PRESENCIAL,ATIVIDADE EXTERNA,PRESENCIAL
-Igor S.,PGD,REMOTO,ATIVIDADE EXTERNA,PRESENCIAL,ATIVIDADE EXTERNA,ATIVIDADE EXTERNA
-Iuri B.,PGD,PRESENCIAL,PRESENCIAL,REMOTO,PRESENCIAL,PRESENCIAL
-Lara B.,CONT. DE FREQ.,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO
-Mateus R.,CONT. DE FREQ.,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO
-Matheus M.,PGD,PRESENCIAL,PRESENCIAL,PRESENCIAL,ATIVIDADE EXTERNA,REMOTO
-Nelson D.,CONT. DE FREQ.,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL
-Valmir R.,PGD,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,REMOTO
-,,,,,,
-SEMANA 2,,19/05/2025,20/05/2025,21/05/2025,22/05/2025,23/05/2025
-Técnico,Modalidade,Segunda,Terça ,Quarta,Quinta,Sexta
-Antônio R.,PGD,PRESENCIAL,PRESENCIAL,REMOTO,PARALISAÇÃO,PARALISAÇÃO
-Edna F.,PGD,REMOTO,PRESENCIAL,PRESENCIAL,PARALISAÇÃO,PARALISAÇÃO
-Francisco F.,PGD,PRESENCIAL,PRESENCIAL,REMOTO,PARALISAÇÃO,PARALISAÇÃO
-Guilherme R.,PGD,PRESENCIAL,PRESENCIAL,REMOTO,PARALISAÇÃO,PARALISAÇÃO
-Heron C.,CONT. DE FREQ.,PRESENCIAL,ATIVIDADE EXTERNA,PRESENCIAL,PARALISAÇÃO,PARALISAÇÃO
-Igor S.,PGD,REMOTO,PRESENCIAL,ATIVIDADE EXTERNA,PARALISAÇÃO,PARALISAÇÃO
-Iuri B.,PGD,PRESENCIAL,PRESENCIAL,REMOTO,PARALISAÇÃO,PARALISAÇÃO
-Lara B.,CONT. DE FREQ.,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,PARALISAÇÃO,PARALISAÇÃO
-Mateus R.,CONT. DE FREQ.,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,PARALISAÇÃO,PARALISAÇÃO
-Matheus M.,PGD,PRESENCIAL,PRESENCIAL,REMOTO,PARALISAÇÃO,PARALISAÇÃO
-Nelson D.,CONT. DE FREQ.,PRESENCIAL,PRESENCIAL,PRESENCIAL,PARALISAÇÃO,PARALISAÇÃO
-Valmir R.,PGD,PRESENCIAL,REMOTO,PRESENCIAL,PARALISAÇÃO,PARALISAÇÃO
-,,,,,Paralisação TAE,
-Obsvervações:                     ,,,,,,
-- Horário de funcionamento do setor: 07h30 ás 16h30,,,,,,
-"- Sujeito a alteração conforme RESOLUÇÃO CONSUNI/UFG Nº 264, DE 14 DE JUNHO DE 2024",,,,,,
-"- Lara B.: Afastamento conforme a Portaria SIG n° 345/2024, no Processo SEI n° 23070.071858/2023-25",,,,,,
-"- Mateus R.: Afastamento conforme a Portaria SIG nº 6388/2024, no Processo SEI nº 23070.048422/2024-13",,,,,,`;
+        const csvData = `SEMANA 1					,,26/05/2025,27/05/2025,28/05/2025,29/05/2025,30/05/2025,26/05/25 ~ 08/06/25
+Técnico,Modalidade,Segunda,Terça ,Quarta,Quinta,Sexta,
+Antônio R.,PGD,REMOTO,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,
+Edna F.,PGD,PRESENCIAL,PRESENCIAL,REMOTO,PRESENCIAL,PRESENCIAL,
+Francisco F.,PGD,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,REMOTO,
+Guilherme R.,PGD,PRESENCIAL,REMOTO,PRESENCIAL,FÉRIAS,FÉRIAS,
+Heron C.,CONT. DE FREQ.,PRESENCIAL,ATIVIDADE EXTERNA,PRESENCIAL,PRESENCIAL,PRESENCIAL,
+Igor S.,PGD,REMOTO,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,
+Iuri B.,PGD,PRESENCIAL,PRESENCIAL,REMOTO,PRESENCIAL,PRESENCIAL,
+Lara B.,CONT. DE FREQ.,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,
+Mateus R.,CONT. DE FREQ.,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,
+Matheus M.,PGD,PRESENCIAL,PRESENCIAL,ATIVIDADE EXTERNA,ATIVIDADE EXTERNA,ATIVIDADE EXTERNA,
+Nelson D.,CONT. DE FREQ.,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,
+Valmir R.,PGD,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,REMOTO,
+,,,,,,,
+SEMANA 2,,02/06/2025,03/06/2025,04/06/2025,05/06/2025,06/06/2025,
+Técnico,Modalidade,Segunda,Terça ,Quarta,Quinta,Sexta,
+Antônio R.,PGD,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,REMOTO,
+Edna F.,PGD,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,REMOTO,
+Francisco F.,PGD,REMOTO,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,
+Guilherme R.,PGD,REMOTO,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,
+Heron C.,CONT. DE FREQ.,PRESENCIAL,ATIVIDADE EXTERNA,PRESENCIAL,PRESENCIAL,PRESENCIAL,
+Igor S.,PGD,REMOTO,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,
+Iuri B.,PGD,PRESENCIAL,PRESENCIAL,REMOTO,PRESENCIAL,PRESENCIAL,
+Lara B.,CONT. DE FREQ.,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,
+Mateus R.,CONT. DE FREQ.,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,AFASTAMENTO,
+Matheus M.,PGD,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,REMOTO,
+Nelson D.,CONT. DE FREQ.,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,
+Valmir R.,PGD,PRESENCIAL,PRESENCIAL,PRESENCIAL,PRESENCIAL,REMOTO,
+,,,,,,,
+Obsvervações:                     ,,,,,,,
+- Horário de funcionamento do setor: 07h30 ás 16h30,,,,,,,
+"- Sujeito a alteração conforme RESOLUÇÃO CONSUNI/UFG Nº 264, DE 14 DE JUNHO DE 2024",,,,,,,
+"- Lara B.: Afastamento conforme a Portaria SIG n° 345/2024, no Processo SEI n° 23070.071858/2023-25",,,,,,,
+"- Mateus R.: Afastamento conforme a Portaria SIG nº 6388/2024, no Processo SEI nº 23070.048422/2024-13",,,,,,,`;
 
         // Função para processar o CSV e extrair dados
         function processCSV(csvText) {
@@ -274,13 +274,16 @@ Obsvervações:                     ,,,,,,
                 case 'AFASTAMENTO':
                     bgClass = 'bg-afastamento';
                     break;
+                case 'FÉRIAS':
+                    bgClass = 'bg-ferias';
+                    break;
                 case 'PARALISAÇÃO':
                     bgClass = 'bg-paralisacao';
                     break;
                 default:
                     bgClass = '';
             }
-            
+
             return `<td class="${bgClass}">${status || ''}</td>`;
         }
 
