--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <title>Escala PGD - Apoio Técnico</title>
+    <title>📅Escala PGD - Apoio Técnico</title>
     
 </head>
 <body>
     <div class="container">
 
         <div class="container navbar">
-            <h3 class="mb-4"><i class="bi bi-calendar3"></i>Escala PGD - Apoio Técnico</h3>
+            <h3 class="mb-4"><i class="bi bi-calendar3"></i>&nbsp;Escala PGD - Apoio Técnico</h3>
             <div class="flexrow">
                     <img alt="LOGO FCT" style="width:95px; height:70px;" src="https://files.cercomp.ufg.br/weby/up/765/o/FCT_UFG.svg?1582742792">
                     <img alt="Logo da UFG" style="width: 122px; height:80px;" src="https://files.cercomp.ufg.br/weby/assets/level2/marca-ufg-677b562915f50ba83e8e1516f068bde65a0e00330471068ad6320189ac9f140a.svg">
